Testing new repo
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@13 68e08561-3e15-0410-b96d-d18bf8373583

--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,4 @@
+<!-- OpenWS project build file -->
 <project name="OpenWS" basedir="." default="package">
 
     <property file="build.properties" />
