Add build libs Move HttpX509EntityCredential from OpenSAML2
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@18 68e08561-3e15-0410-b96d-d18bf8373583

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="conf"/>
+	<classpathentry kind="lib" path="build-lib/xmlunit1.0.jar"/>
+	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
