--- a/build.xml
+++ b/build.xml
@@ -20,9 +20,9 @@
     <property name="jdk.target" value="1.5" />
 
     <property name="version" value="trunk" />
-	<property name="jar.name" value="xmltooling-${version}-jdk-${jdk.target}.jar" />
-	<property name="src-dist.name" value="xmltooling-${version}-jdk-${jdk.target}-src" />
-	<property name="bin-dist.name" value="xmltooling-${version}-jdk-${jdk.target}-bin" />
+	<property name="jar.name" value="openws-${version}-jdk-${jdk.target}.jar" />
+	<property name="src-dist.name" value="openws-${version}-jdk-${jdk.target}-src" />
+	<property name="bin-dist.name" value="openws-${version}-jdk-${jdk.target}-bin" />
     <property name="year" value="2002-2006" />
     <property name="copyright" value="Copyright &#169; ${year} UCAID. All Rights Reserved." />
 
@@ -104,8 +104,8 @@
         	     sourcepath="${core-src.dir}" 
         	     destdir="${javadoc.dir}" 
         	     author="false" version="true" 
-        	     windowtitle="XML Tooling ${version} Java API" 
-        	     doctitle="XML Tooling ${version} Java API" 
+        	     windowtitle="OpenWS ${version} Java API" 
+        	     doctitle="OpenWS ${version} Java API" 
         	     bottom="${copyright}"
         	     overview="${core-src.dir}/overview.html">
             <classpath refid="build-path" />
