--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,8 @@
 <project name="OpenWS" basedir="." default="package">
+	
+	<tstamp>
+		<format property="build-date" pattern="ddMMyyyy'T'kkmmss" timezone="GMT"/>
+	</tstamp>
 
     <property file="build.properties" />
 
@@ -14,12 +18,13 @@
     <property name="core-classes.dir" value="${build.dir}/core" />
     <property name="test-classes.dir" value="${build.dir}/test" />
     <property name="test-results.dir" value="${build.dir}/test-results" />
-	<property name="test-report.dir" value="${doc.dir}/test-report" />
+	<property name="reports.dir" value="${doc.dir}/reports" />
+	<property name="test-report.dir" value="${reports.dir}/unit-test" />
     <property name="dist.dir" value="${basedir}/dist" />
 
     <property name="jdk.target" value="1.5" />
 
-    <property name="version" value="trunk" />
+    <property name="version" value="${build-date}" />
 	<property name="jar.name" value="openws-${version}-jdk-${jdk.target}.jar" />
 	<property name="src-dist.name" value="openws-${version}-jdk-${jdk.target}-src" />
 	<property name="bin-dist.name" value="openws-${version}-jdk-${jdk.target}-bin" />
@@ -28,6 +33,10 @@
 
     <!-- Load ant-contrib tasks -->
     <taskdef resource="net/sf/antcontrib/antlib.xml" />
+	
+	<!-- Load Checkstyle tasks -->
+		<taskdef resource="checkstyletask.properties"
+		         classpath="{${build-lib.dir}/checkstyle-all-4.2.jar"/>
 
     <!-- Classpath for building core classes-->
     <path id="build-path">
@@ -163,6 +172,19 @@
     <!-- ***                     Developer Tasks                      *** -->
     <!-- ***                                                          *** -->
     <!-- **************************************************************** -->
+	
+	<!-- Checks code against style guidelines -->
+	<target name="checkstyle" >
+		<mkdir dir="${reports.dir}" />
+		
+		<checkstyle config="${basedir}/checkstyle.xml"
+					failOnViolation="false"
+	                classpathref="build-path">
+			<fileset dir="src" includes="**/*.java"/>
+			<formatter type="plain"
+					   toFile="${reports.dir}/checkstyle-report.txt" />
+		</checkstyle>
+	</target>
 	
     <!-- Create TGZ source distribution -->
     <target name="tgz-src-dist" depends="package, javadoc">
