cleanup checkstyle task def
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@22 68e08561-3e15-0410-b96d-d18bf8373583

--- a/build.xml
+++ b/build.xml
@@ -35,8 +35,7 @@
     <taskdef resource="net/sf/antcontrib/antlib.xml" />
 	
 	<!-- Load Checkstyle tasks -->
-		<taskdef resource="checkstyletask.properties"
-		         classpath="{${build-lib.dir}/checkstyle-all-4.2.jar"/>
+		<taskdef resource="checkstyletask.properties" />
 
     <!-- Classpath for building core classes-->
     <path id="build-path">
