Align with OpenSAML stack projects layout Update build to stack build file Add misisng junit jar
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@34 68e08561-3e15-0410-b96d-d18bf8373583

--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,8 @@
 # JDK version to target, allowed values are 1.4 or 1.5
 jdk.target = 1.5
+
+# Project related information
+project.name = openws
+year = 2002-2007
+copyright = Copyright &#169; ${year} UCAID. All Rights Reserved.
+version = ${build-date}
