--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources/classpath"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/java-xmltooling"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="conf"/>
 	<classpathentry kind="lib" path="build-lib/xmlunit1.0.jar"/>
 	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
