Don't export build-lib jars
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@40 68e08561-3e15-0410-b96d-d18bf8373583

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="build-lib/xmlunit1.0.jar"/>
 	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
+	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
