Add Spring core jar, has dependencies needed by Spring mock jar.
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@81 68e08561-3e15-0410-b96d-d18bf8373583

--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-3.0.1-commons-codec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-3.0.1.jar"/>
 	<classpathentry kind="lib" path="build-lib/spring-2.0.5-mock.jar"/>
+	<classpathentry kind="lib" path="build-lib/spring-2.0.5-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
