back out last change, was in the wrong project
git-svn-id: https://svn.shibboleth.net/java-openws/trunk@209 68e08561-3e15-0410-b96d-d18bf8373583

--- a/build.properties
+++ b/build.properties
@@ -30,6 +30,6 @@ test-results.dir=${build.dir}/test-results
 
 # Distribution file releated itmes
 base-package.name = openws
-version = 1.0.0
+version = trunk
 dist.dir=${basedir}/dist
 jar.name=${base-package.name}-${version}-jdk-${jdk.target}.jar
