--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>0.9.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <reporting>
