--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="src" path="resources/classpath"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/java-xmltooling"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="build-lib/xmlunit1.0.jar"/>
-	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
-	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="build-lib/spring-2.0.7-core.jar"/>
-	<classpathentry kind="lib" path="build-lib/spring-2.0.7-mock.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
