--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,20 @@
             </snapshots>
         </repository>
     </repositories>
+    
+    <distributionManagement>
+        <repository>
+            <id>ssh-repository</id>
+            <url>scpexe://www.internet2.edu/home/htdocs/shibboleth.internet2.edu/downloads/maven2</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>xmltooling</artifactId>
-            <version>1.1.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
