--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>net.shibboleth</groupId>
-        <artifactId>parent-v2</artifactId>
+        <groupId>io.apigee.opensaml</groupId>
+        <artifactId>opensaml-parent</artifactId>
         <version>1</version>
     </parent>
     
-    <groupId>org.opensaml</groupId>
+    <groupId>io.apigee.opensaml</groupId>
     <artifactId>openws</artifactId>
     <version>1.5.2-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -46,13 +46,9 @@
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
-            <groupId>org.opensaml</groupId>
+            <groupId>io.apigee.opensaml</groupId>
             <artifactId>xmltooling</artifactId>
             <version>1.4.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
@@ -240,4 +236,9 @@
         </profile>
     </profiles>
     
+    <scm>
+        <connection>scm:git:https://github.com/apigee/java-openws.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/apigee/java-openws.git</developerConnection>
+        <url>git@github.com:apigee/java-openws.git</url>
+    </scm>
 </project>
